관제 화면 UI 및 Thymeleaf layout 테스트

--- a/danusys-platform/src/main/resources/templates/layout/layout_mntr.html
+++ b/danusys-platform/src/main/resources/templates/layout/layout_mntr.html
@@ -21,11 +21,11 @@
 
     <body>
         <div class="wrap">
-            <th:block th:replace="fragments/default/header">
+            <th:block th:replace="fragments/default/header :: headerFragment">
             </th:block>
             <th:block layout:fragment="content">
             </th:block>
-            <th:block th:replace="fragments/default/footer">
+            <th:block th:replace="fragments/default/footer :: footerFragment">
             </th:block>
         </div>
     </body>
