--- a/danusys-platform/src/main/resources/templates/layout/layout_mntr.html
+++ b/danusys-platform/src/main/resources/templates/layout/layout_mntr.html
@@ -1,30 +1,18 @@
 <!DOCTYPE html>
-
-<html lang="ko" xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.uz/thymeleaf/layout" >
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
     <head>
-        <meta charset="utf-8">
-        <title>SMART-CITY 통합플랫폼</title>
-
-        <!-- default css files -->
-        <link rel="stylesheet" type="text/css" href="/css/default/layout.css">
-
-        <!-- css in contents -->
-        <th:block layout:fragment="css"></th:block>
-
-        <!-- default javascript files-->
-        <script src="/webjars/jquery/3.6.0/dist/jquery.min.js"></script>
-
-        <!-- javascript in contents -->
-        <th:block layout:fragment="script"></th:block>
+        <th:block th:insert="fragments/mntr/includes :: includes_head(~{::link})"></th:block>
     </head>
-
     <body>
         <div class="wrap">
             <th:block th:replace="fragments/default/header :: headerFragment">
             </th:block>
             <th:block layout:fragment="content">
             </th:block>
+
+            <th:block th:insert="fragments/mntr/includes :: includes_footer(~{::script})">
+            </th:block>
+
             <th:block th:replace="fragments/default/footer :: footerFragment">
             </th:block>
         </div>
