--- a/danusys-platform/src/main/resources/templates/fragments/default/config.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/config.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-    <head>
-        <meta charset="utf-8">
-        <title>SMART-CITY 통합플랫폼</title>
+    <th:block th:fragment="configFragment">
+        <head>
+            <meta charset="utf-8">
+            <title>SMART-CITY 통합플랫폼</title>
 
-        <!-- default css files -->
-        <link rel="stylesheet" type="text/css" href="css/default.css">
+            <!-- default css files -->
+            <link rel="stylesheet" type="text/css" href="css/default/default.css">
 
-        <!-- css in contents -->
-        <th:block layout:fragment="css"></th:block>
+            <!-- css in contents -->
+            <th:block layout:fragment="css"></th:block>
 
-        <!-- default javascript files-->
-        <script src="/webjars/jquery/3.6.0/dis/jquery.min.js"></script>
-        <script src="./script.js"></script>
+            <!-- default javascript files-->
+            <script src="/webjars/jquery/3.6.0/dist/jquery.min.js"></script>
 
-        <!-- javascript in contents -->
-        <th:block layout:fragment="script"></th:block>
-    </head>
+            <!-- javascript in contents -->
+            <th:block layout:fragment="script"></th:block>
+        </head>
+    </th:block>
 </html>
