--- a/danusys-platform/src/main/resources/templates/fragments/default/footer.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/footer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-  <th:block th:fragment="footerFragment">
-    <footer>Copyright 2020. DANUSYS All rights reserved.</footer>
-  </th:block>
+    <th:block th:fragment="footerFragment">
+        <footer style="display: none;">Copyright 2020. DANUSYS All rights reserved.</footer>
+    </th:block>
 </html>
