--- a/danusys-platform/src/main/resources/templates/view/mntr.html
+++ b/danusys-platform/src/main/resources/templates/view/mntr.html
@@ -423,85 +423,10 @@
         </div>
         <button class="lnbToggle"><span></span></button>
     </div>
+</th:block>
 
-
-    <th:block layout:fragment="script">
-        <script type="text/javascript">
-            $(function() {
-                $(".lnbToggle").on("click", function() {
-                    $(".lnb").toggleClass("toggle");
-                })
-            })
-            $(".selectboxCheck_title").click(function(){
-                $(".selectCheckList").show();
-            })
-
-            $('.lnb .tabButton li').click(function(){
-                $(this).addClass('on');
-            });
-
-            $(".infoTitle i").click(function(){
-                $(".infoArea").hide("2000");
-            })
-
-
-            $(function(){
-                // 각각의 셀렉트 박스 인스턴스 생성
-                var selectType01 = new CustomSelectBox('.selectBox.type01');
-            });
-
-        //    selectbox custom
-            function CustomSelectBox(selector){
-                this.$selectBox = null,
-                this.$select = null,
-                this.$list = null,
-                this.$listLi = null;
-                CustomSelectBox.prototype.init = function(selector){
-                    this.$selectBox = $(selector);
-                    this.$select = this.$selectBox.find('.box .select');
-                    this.$list = this.$selectBox.find('.box .list');
-                    this.$listLi = this.$list.children('li');
-                }
-                CustomSelectBox.prototype.initEvent = function(e){
-                    var that = this;
-                    this.$select.on('click', function(e){
-                        that.listOn();
-                    });
-                    this.$listLi.on('click', function(e){
-                        that.listSelect($(this));
-                    });
-                    $(document).on('click', function(e){
-                        that.listOff($(e.target));
-                    });
-                }
-                CustomSelectBox.prototype.listOn = function(){
-                    this.$selectBox.toggleClass('on');
-                    if(this.$selectBox.hasClass('on')){
-                        this.$list.css('display', 'block');
-                    }else{
-                        this.$list.css('display', 'none');
-                    };
-                }
-                CustomSelectBox.prototype.listSelect = function($target){
-                    $target.addClass('selected').siblings('li').removeClass('selected');
-                    this.$selectBox.removeClass('on');
-                    this.$select.text($target.text());
-                    this.$list.css('display', 'none');
-                }
-                CustomSelectBox.prototype.listOff = function($target){
-                    if(!$target.is(this.$select) && this.$selectBox.hasClass('on')){
-                        this.$selectBox.removeClass('on');
-                        this.$list.css('display', 'none');
-                    };
-                }
-                this.init(selector);
-                this.initEvent();
-            }
-
-
-        </script>
-    </th:block>
-
+<th:block th:fragment="pagesScript">
+    <script type="text/javascript" src="/js/pages/mntr.js"></script>
 </th:block>
 
 </html>
