--- a/danusys-platform/src/main/resources/templates/fragments/default/header.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/header.html
@@ -4,17 +4,28 @@
     <header>
         <h1 class="logo"><i><img src="/images/default/headerMenu.svg"></i>Title</h1>
         <ul class="gnm">
-            <li>Home</li>
-            <li>Dashboard</li>
-            <li>Monitoring &amp; Control</li>
-            <li>Inquiry &amp; Management</li>
-            <li>Statistics</li>
-            <li>Configuration</li>
+            <li id="home" th:classappend="${#httpServletRequest.getRequestURI()}"><a href="home">Home</a></li>
+            <li id="dashboard"><a href="dashboard">Dashboard</a></li>
+            <li id="mntr"><a href="mntr">Monitoring & Control</a></li>
+            <li id="inqry"><a href="inqry">Inquiry &amp; Management</a></li>
+            <li id="stats"><a href="stats">Statistics</a></li>
+            <li id="config"><a href="config">Configuration</a></li>
         </ul>
         <ul class="utmenu">
             <li><i><img src="/images/default/utmenu01.svg"></i>알림</li>
             <li><i><img src="/images/default/utmenu02.svg"></i>admin 님</li>
         </ul>
     </header>
+    <script>
+        $(function() {
+            // $(".gnm li").on("click", function(e) {
+            //     console.log(e);
+            //     location.href = e.target.id;
+            //     $(".gnm li.active").removeClass("active");
+            //     $(this).addClass("active");
+            // });
+
+        })
+    </script>
 </th:block>
 </html>
