--- a/danusys-platform/src/main/resources/templates/fragments/default/includes.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/includes.html
@@ -1,10 +1,11 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <th:block th:fragment="includes_head(pagesLink)">
     <meta charset="utf-8">
-    <title>SMART-CITY 통합플랫폼</title>
+    <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">SMART-CITY 통합플랫폼</title>
 <!--    <meta name="description" content="Latest updates and statistic charts">-->
-<!--    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=3.0, minimum-scale=1.0"/>-->
+<!--    <meta name="viewport" content="width=device-width, user-scalable=no, initial-sca le=1.0, maximum-scale=3.0, minimum-scale=1.0"/>-->
 <!--    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>-->
 <!--    <meta property="og:type" content="website"/>-->
     <meta name="ctx" th:content="${#httpServletRequest.getContextPath()}" />
