--- a/danusys-platform/src/main/resources/templates/layout/layout_dashboard.html
+++ b/danusys-platform/src/main/resources/templates/layout/layout_dashboard.html
@@ -13,6 +13,9 @@
 
             <th:block th:insert="fragments/default/includes :: includes_footer(~{::pagesScript})">
             </th:block>
+
+            <th:block th:replace="fragments/default/footer :: footerFragment">
+            </th:block>
         </div>
     </body>
 
