--- a/danusys-drone/src/main/resources/templates/fragments/default/includes.html
+++ b/danusys-drone/src/main/resources/templates/fragments/default/includes.html
@@ -25,7 +25,7 @@
     </th:block>
 </th:block>
 
-<th:block th:fragment="includes_footer(pagesScript)">
+<!--<th:block th:fragment="includes_footer(pagesScript)">-->
 <!--    <th:block th:if="${!#arrays.contains(@environment.getActiveProfiles(),'local-1')}">-->
 
 <!--    </th:block>-->
@@ -33,9 +33,9 @@
 <!--    </th:block>-->
 
     <!-- js 파일-->
-    <th:block th:if="${pagesScript}" >
-        <th:block th:insert="${pagesScript}"></th:block>
-    </th:block>
+<!--    <th:block th:if="${pagesScript}" >-->
+<!--        <th:block th:insert="${pagesScript}"></th:block>-->
+<!--    </th:block>-->
 
 </th:block>
 
