--- a/danusys-commons-ui/src/main/resources/templates/view/commons/map.html
+++ b/danusys-commons-ui/src/main/resources/templates/view/commons/map.html
@@ -12,7 +12,7 @@
 
     <th:block th:fragment="defaultMap">
         <div id="map">
-            <div class="mapButton">
+            <!--<div class="mapButton">
                 <ul class="tabButton">
                     <li class="on">지도</li>
                     <li>스카이뷰</li>
@@ -32,7 +32,7 @@
                     <li><i><img src="/images/default/mapButtonAlign.svg"></i>정렬</li>
                     <li><i><img src="/images/default/mapButtonLayer.svg"></i>레이어</li>
                 </ul>
-            </div>
+            </div>-->
         </div>
     </th:block>
 
