--- a/danusys-drone/src/main/resources/static/css/default/default.css
+++ b/danusys-drone/src/main/resources/static/css/default/default.css
@@ -66,7 +66,7 @@ header ul.utmenu li{display: flex; align-items: center; height: 100%; padding: 0
 
 .lnb{position: absolute; top: 60px; left: 0px; display: flex; flex-direction: column; width: 320px; height: calc(100% - 60px); transition: all 1s; background: #1a1b1d;}
 .lnbToggle{position: absolute; left: 320px; top: 50%; transform: translateY(-50%); width: 24px; height: 60px; border: none; border-radius: 0; border-top-right-radius: 10px; border-bottom-right-radius: 10px; box-sizing: border-box; border: 2px solid #515364; border-left: none; background: rgba(26,27,29,0.8); text-indent: -9999px; cursor: pointer;}
-.lnbToggle span{display: block; width: 7px; height: 12px; background: url(../images/default/lnbToggle.png) center center no-repeat;}
+.lnbToggle span{display: block; width: 7px; height: 12px; background: url(../../images/default/lnbToggle.png) center center no-repeat;}
 .lnbToggle:hover span{-ms-transform: rotate(180deg); -webkit-transform: rotate(180deg); transform: rotate(180deg);}
 .lnb.toggle{left: -320px;}
 
@@ -172,7 +172,7 @@ header ul.utmenu li{display: flex; align-items: center; height: 100%; padding: 0
 .mapComponent article.control div ul{flex: 1; display: flex; align-items: center; justify-content: center; column-gap: 20px; margin: 14px;}
 .mapComponent article.control div ul li{display: flex; flex-direction: column; align-items: center; color: #7f8491; cursor: pointer;}
 .mapComponent article.control div ul li:hover{color: #dee0e4;}
-.mapComponent article i.controlButton{display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; margin: 0px auto 8px; box-sizing: border-box; background: url(../images/default/controlButtonBg.png) center center no-repeat;}
+.mapComponent article i.controlButton{display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; margin: 0px auto 8px; box-sizing: border-box; background: url(../../images/default/controlButtonBg.png) center center no-repeat;}
 .mapComponent article i.controlButton img{width: 20px; height: 20px; margin: 0px;}
 .mapComponent article.values{width: 460px; display: flex; flex-direction: column;}
 .mapComponent article.values ul{flex: 1; display: flex; align-items: center; margin: 14px;}
