--- a/danusys-drone/src/main/resources/templates/view/pages/dashboard.html
+++ b/danusys-drone/src/main/resources/templates/view/pages/dashboard.html
@@ -2,17 +2,14 @@
 <html lang="ko"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/layout_dashboard">
+      layout:decorator="~{layout/base_layout}">
 <head>
-    <title>Dashboard</title>
+    <title>대시보드</title>
+    <script src="/js/pages/dashboard.js" defer></script>
 </head>
-<th:block layout:fragment="css">
-</th:block>
 
-<th:block layout:fragment="content">
-    <h1>Dashboard</h1>
-</th:block>
+<section layout:fragment="content">
+    <h1>dashboard</h1>
+</section>
 
-<th:block th:fragment="pagesScript">
-</th:block>
 </html>
