--- a/danusys-drone/src/main/resources/templates/view/pages/drone.html
+++ b/danusys-drone/src/main/resources/templates/view/pages/drone.html
@@ -2,18 +2,13 @@
 <html lang="ko"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/layout_stats">
+      layout:decorator="~{layout/base_layout}">
 <head>
-    <title>Statistics</title>
+    <title>drone</title>
 </head>
-<th:block layout:fragment="css">
-</th:block>
 
 <th:block layout:fragment="content">
-    <h1>Statistics</h1>
-</th:block>
-
-<th:block th:fragment="pagesScript">
+    <h1>드론입니다</h1>
 </th:block>
 
 </html>
