--- a/danusys-drone/src/main/resources/templates/view/pages/home.html
+++ b/danusys-drone/src/main/resources/templates/view/pages/home.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/layout_home">
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="~{layout/base_layout}">
 <head>
     <title>Home</title>
+    <script src="/js/pages/home.js" defer></script>
 </head>
-<th:block layout:fragment="css">
-</th:block>
 
-<th:block layout:fragment="content">
+<section layout:fragment="content">
     <h1>Home</h1>
-</th:block>
-
-<th:block th:fragment="pagesScript">
-</th:block>
+</section>
 
 </html>
