--- a/danusys-drone/src/main/resources/templates/view/pages/log.html
+++ b/danusys-drone/src/main/resources/templates/view/pages/log.html
@@ -2,9 +2,9 @@
 <html lang="ko"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/layout_inqry">
+      layout:decorator="~{layout/base_layout}">
 <head>
-    <title>Inquiry & Management</title>
+    <title>로그</title>
 </head>
 <th:block layout:fragment="css">
 </th:block>
