--- a/danusys-platform/src/main/resources/templates/layout/layout_mntr.html
+++ b/danusys-platform/src/main/resources/templates/layout/layout_mntr.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
     <head>
-        <th:block th:insert="fragments/default/includes :: includes_head(~{::pagesLink})"></th:block>
+        <meta charset="utf-8">
+        <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">SMART-CITY 통합플랫폼</title>
+        <!--    <meta name="description" content="Latest updates and statistic charts">-->
+        <!--    <meta name="viewport" content="width=device-width, user-scalable=no, initial-sca le=1.0, maximum-scale=3.0, minimum-scale=1.0"/>-->
+        <!--    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>-->
+        <!--    <meta property="og:type" content="website"/>-->
+        <meta name="ctx" th:content="${#httpServletRequest.getContextPath()}" />
+        <meta http-equiv="Cache-Control" content="no-cache" />
+        <meta http-equiv="Pragma" content="no-cache" />
+        <meta name="context-path" th:content="@{/}"/>
+        <!--    <link rel="shortcut icon" th:href="@{/media/images/favicon/favicon.ico}" />-->
+
+        <!-- default css files -->
+        <link rel="stylesheet" type="text/css" href="/css/default/layout.css">
+
+        <!--js file -->
+        <script src="/webjars/jquery/3.6.0/dist/jquery.min.js"></script>
     </head>
     <body>
         <div class="wrap">
