--- a/danusys-drone/src/main/resources/templates/layout/base_layout.html
+++ b/danusys-drone/src/main/resources/templates/layout/base_layout.html
@@ -26,8 +26,8 @@
         <header th:include="fragments/default/header :: headerFragment">
         </header>
 
-        <section layout:fragment="content">
-        </section>
+        <th:block layout:fragment="content">
+        </th:block>
 
         <footer th:replace="fragments/default/footer :: footerFragment">
         </footer>
