--- a/danusys-drone/src/main/resources/templates/view/pages/home.html
+++ b/danusys-drone/src/main/resources/templates/view/pages/home.html
@@ -8,8 +8,8 @@
     <script src="/js/pages/home.js" defer></script>
 </head>
 
-<section layout:fragment="content">
+<th:block layout:fragment="content">
     <h1>Home</h1>
-</section>
+</th:block>
 
 </html>
