--- a/danusys-drone/src/main/resources/templates/view/pages/misn.html
+++ b/danusys-drone/src/main/resources/templates/view/pages/misn.html
@@ -7,7 +7,7 @@
     <title>Monitoring & Control</title>
 </head>
 
-<section layout:fragment="content">
+<th:block layout:fragment="content">
     <div class="droneMap">
         <th:block th:insert="/view/commons/map">
         </th:block>
@@ -212,7 +212,7 @@
         <button class="lnbToggle"><span></span></button>
     </div>
     </div>
-</section>
+</th:block>
 
 <footer layout:fragment="footer">
 </footer>
