--- a/danusys-commons-auth/src/main/resources/templates/view/login/test2.html
+++ b/danusys-commons-auth/src/main/resources/templates/view/login/test2.html
@@ -67,23 +67,23 @@
 
     <div class="login-form">
 
-            <dl>
-                <dd>
-                    <span>ID</span>
-                    <span><input type="text" id="id" name="username" placeholder="아이디를 입력하세요." tabindex="1"></span>
-                </dd>
-                <dd>
-                    <span>PW</span>
-                    <span><input type="password" id="pwd" name="password" placeholder="비밀번호를 입력하세요."
-                                 tabindex="2"></span>
-                </dd>
-                <dt>
+        <dl>
+            <dd>
+                <span>ID</span>
+                <span><input type="text" id="id" name="username" placeholder="아이디를 입력하세요." tabindex="1"></span>
+            </dd>
+            <dd>
+                <span>PW</span>
+                <span><input type="password" id="pwd" name="password" placeholder="비밀번호를 입력하세요."
+                             tabindex="2"></span>
+            </dd>
+            <dt>
                     <span class=""><input type="checkbox" id="remember-me" name="remember-me"><label for="remember-me"
                                                                                                      tabindex="3"></label>Save ID</span>
-                    <span><button class="login-btn">LOGIN</button></span>
-                </dt>
-                <!-- <dd class="forgot">Forgot ID or PASSWORD?</dd> -->
-            </dl>
+                <span><button class="login-btn">LOGIN</button></span>
+            </dt>
+            <!-- <dd class="forgot">Forgot ID or PASSWORD?</dd> -->
+        </dl>
 
     </div>
 </div>
@@ -92,28 +92,20 @@
 <script>
 
 
-    setInterval(function (){
+    setInterval(function () {
         $.ajax({
             url: "/auth/regenerateToken",
-            type:"POST",
+            type: "POST",
             success: function (resultData) {
-                let keys=Object.keys(resultData.jwt);
-                console.log("keys",keys);
-                console.log("resultData.jwt",resultData.jwt);
-                //localStorage.setItem(key[0],resultData[key]);
-                console.log("resultData.jwt[keys[0]",resultData.jwt[keys[0]]);
-                console.log("resultData.jwt[keys[1]",resultData.jwt[keys[1]]);
-                //console.log(localStorage.getItem(key));
-                console.log("keys[1]=",keys[1]);
-
-                document.cookie=keys[0]+'='+resultData.jwt[keys[0]];//s + "; " + keys[1]+'='+resultData.jwt[keys[1]] ;
-                document.cookie=keys[1]+'='+resultData.jwt[keys[1]];
-                document.cookie=keys[2]+'='+resultData.jwt[keys[2]];
-
-
+                let keys = Object.keys(resultData.jwt);
+                keys.forEach(key => {
+                    if (key === 'refreshToken' || key === 'accessToken') {
+                        document.cookie = key + '=' + resultData.jwt[key];
+                    }
+                });
             }
         });
-                          },10000);
+    }, 1000 * 60 * 5);
 
 
 </script>
