commons-auth 1.1.0 with exception

--- a/danusys-commons-auth/src/main/resources/templates/view/login/loginError.html
+++ b/danusys-commons-auth/src/main/resources/templates/view/login/loginError.html
@@ -31,14 +31,13 @@ $(document).ready(function() {
 			<dl class="login-fail">
 				<dt>
 					<span class="icon"><img src="/images/login/login_fail_img.png"></span>
-<!--					<span class="txt-bold">아이디 또는 비밀번호를<br>다시 확인하세요.</span>-->
-					<span class="txt-bold"th:text="${#httpServletRequest.getAttribute('failMsg')}"></span>
-
+					<span class="txt" th:text="${#httpServletRequest.getAttribute('failMsg')}"></span>
+					<span class="txt-bold">아이디 또는 비밀번호를<br>다시 확인하세요.</span>
 					<span class="txt">통합플랫폼에 등록되지 않은 아이디이거나,<br>아이디 또는 비밀번호를 잘못 입력하셨습니다.</span>
 				</dt>
-				<dd onclick="javascript:window.location = '/hitest'">
+				<dd onclick="javascript:window.location = '/login/loginPage'">
 					<span class="icon"><img src="/images/login/icon_arrow_back.png"></span>
-					<span class="txt">뒤로 </span>
+					<span class="txt">뒤로 가기</span>
 				</dd>
 			</dl>
 		</div>
