--- a/danusys-commons-auth/src/main/resources/templates/view/login/test2.html
+++ b/danusys-commons-auth/src/main/resources/templates/view/login/test2.html
@@ -90,22 +90,25 @@
 
 </body>
 <script>
-
-
-    setInterval(function () {
+    function regenerateToken(){
         $.ajax({
             url: "/auth/regenerateToken",
             type: "POST",
             success: function (resultData) {
-                let keys = Object.keys(resultData.jwt);
+                let keys = Object.keys(resultData);
                 keys.forEach(key => {
-                    if (key === 'refreshToken' || key === 'accessToken') {
-                        document.cookie = key + '=' + resultData.jwt[key];
+                    if (key === 'accessToken') {
+                        document.cookie = key + '=' + resultData[key];
                     }
                 });
             }
         });
-    }, 1000 * 60 * 5);
+    }
+
+
+    regenerateToken();
+    setInterval(regenerateToken
+    , 1000 * 60 * 5);
 
 
 </script>
