--- a/danusys-drone/src/main/resources/templates/view/pages/flying.html
+++ b/danusys-drone/src/main/resources/templates/view/pages/flying.html
@@ -5,6 +5,11 @@
       layout:decorator="~{layout/base_layout}">
 <head>
     <title>비행</title>
+    <script src="/webjars/sockjs-client/1.5.1/sockjs.min.js"></script>
+    <script src="/webjars/stomp-websocket/2.3.4/stomp.min.js"></script>
+    <script src="/js/pages/droneInfo.js"></script>
+
+    <script src="/js/pages/droneInfo.js" defer></script>
     <script src="/js/pages/flying.js" defer></script>
 </head>
 
