조회 및 관리 페이지: 1차 레이아웃 분리작업

--- a/danusys-platform/src/main/resources/templates/fragments/default/header.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/header.html
@@ -7,7 +7,7 @@
             <li id="home"><a href="/pages/home">Home</a></li>
             <li id="dashboard"><a href="/pages/dashboard">Dashboard</a></li>
             <li id="mntr"><a href="/pages/mntr">Monitoring & Control</a></li>
-            <li id="inqry"><a href="/pages/inqry">Inquiry &amp; Management</a></li>
+            <li id="inqry"><a href="/pages/inqry/event1">Inquiry &amp; Management</a></li>
             <li id="stats"><a href="/pages/stats">Statistics</a></li>
             <li id="config"><a href="/pages/config">Configuration</a></li>
         </ul>
