--- a/danusys-platform/src/main/resources/static/css/default/layout.css
+++ b/danusys-platform/src/main/resources/static/css/default/layout.css
@@ -244,19 +244,22 @@ header .utmenu{display: flex; align-items: center; column-gap: 40px;}
 
 /* accordionMenu */
 .accordionMenu{overflow: hidden; width: 320px; min-width: 320px; max-width: 320px; height: auto; background: #1a1b1d;}
-.accordion, .accordion ul, .accordion li, .accordion a, .accordion span{margin: 0; padding: 0; border: none; outline: none;}
-.accordion li{list-style: none;}
+.accordion, .accordion ul, .accordion li, .accordion a, .accordion span. .accordion dl{margin: 0; padding: 0; border: none; outline: none;}
+.accordion li, .accordion dl{list-style: none;}
 
 /* Layout & Style */
-.accordion li > a{position: relative; display: flex; align-items: center; justify-content: space-between; height: 60px; padding: 0px 24px 0px 48px; color: #797d87; font-size: 16px; text-decoration: none; box-sizing: border-box; border-bottom: 1px solid #292c34; background: #1a1b1d;}
+.accordion li > a, .accordion dd > a{position: relative; display: flex; align-items: center; justify-content: space-between; height: 60px; padding: 0px 24px 0px 48px; color: #797d87; font-size: 16px; text-decoration: none; box-sizing: border-box; border-bottom: 1px solid #292c34; background: #1a1b1d;}
 .accordion > li:hover > a,
-.accordion > li:target > a,
-.accordion > li.on > a{color: #dee0e4; background: #26282f;}
+/*.accordion > li:target > a,*/
+.accordion > li.on > a,
+.accordion > dd:hover > a,
+    /*.accordion > li:target > a,*/
+.accordion > dd.on > a{color: #dee0e4; background: #26282f;}
 
 /* count */
-.accordion li > a span{color: #bc4a4a; font-size: 15px; font-weight: bold;}
+.accordion li > a span, .accordion dl > a{color: #bc4a4a; font-size: 15px; font-weight: bold;}
 .accordion > li:hover > a span,
-.accordion > li:target > a span,
+/*.accordion > li:target > a span,*/
 .accordion > li.on > a span{color: #bc4a4a; font-size: 15px; font-weight: bold;}
 
 /* Images */
@@ -266,16 +269,18 @@ header .utmenu{display: flex; align-items: center; column-gap: 40px;}
 
 /* Sub Menu */
 .sub-menu{}
-.sub-menu li a {padding: 0px 24px 0px 446x; color: #797d87; font-size: 14px; border: none; background: #1a1b1d;}
-.sub-menu li a:before{position: absolute; top: 20px; left: 24px; content: ''; width: 12px; height: 12px; margin: 0px; box-sizing: border-box; background: url(../../images/default/settingMenuTree.svg);}
-.sub-menu li > a span{color: #bc4a4a; font-size: 15px; font-weight: bold;}
+.sub-menu dd a {color: #797d87; font-size: 14px; border: none; background: #1a1b1d;}
+.sub-menu dd a:before{position: absolute; top: 20px; left: 24px; content: ''; width: 12px; height: 12px; margin: 0px; box-sizing: border-box; background: url(../../images/default/settingMenuTree.svg);}
+.sub-menu dd > a span{color: #bc4a4a; font-size: 15px; font-weight: bold;}
 
 /* Functionality */
 .accordion li > .sub-menu{height: 0; overflow: hidden; -webkit-transition: height .2s ease-in-out; -moz-transition: height .2s ease-in-out; -o-transition: height .2s ease-in-out; -ms-transition: height .2s ease-in-out; transition: height .2s ease-in-out;}
-.accordion li:target > .sub-menu{height: 120px; box-sizing: border-box; border-bottom: 1px solid #292c34;}
-.sub-menu li a:hover,
-.sub-menu li a:active,
-.sub-menu li a:target{color: #dee0e4;}
+/*.accordion li:target > .sub-menu{height: 120px; box-sizing: border-box; border-bottom: 1px solid #292c34;}*/
+.accordion li.on > .sub-menu{height: 120px; box-sizing: border-box; border-bottom: 1px solid #292c34;}
+.sub-menu dd a:hover,
+.sub-menu dd a:active,
+.sub-menu dd a:target,
+.sub-menu dd.on > a{color: #dee0e4;}
 /* //accordionMenu */
 
 
