미션 ui 개발 추가사항

--- a/danusys-drone/src/main/resources/templates/layout/base_layout.html
+++ b/danusys-drone/src/main/resources/templates/layout/base_layout.html
@@ -29,7 +29,9 @@
         <th:block layout:fragment="content">
         </th:block>
 
-        <footer th:replace="fragments/default/footer :: footerFragment">
+        <footer layout:fragment="footer">
+            <th:block th:replace="fragments/default/footer :: footerFragment">
+            </th:block>
         </footer>
     </div>
 </body>
