--- a/danusys-commons-ui/src/main/resources/templates/view/commons/map.html
+++ b/danusys-commons-ui/src/main/resources/templates/view/commons/map.html
@@ -36,7 +36,7 @@
         </div>
     </th:block>
 
-    <th:block th:fragments="pagesScript">ㅡ
+    <th:block th:fragments="pagesScript">
         <!-- openlayers3 lib -->
         <script type="text/javascript" src="/webjars/proj4js/2.2.1/proj4.js"></script>
         <script type="text/javascript" src="/webjars/openlayers/6.9.0/ol.js"></script>
