--- a/danusys-drone/src/main/resources/static/css/default/layout.css
+++ b/danusys-drone/src/main/resources/static/css/default/layout.css
@@ -20,20 +20,21 @@ a:hover{ text-decoration: none; color: #dee0e4;}
 ::-webkit-scrollbar-thumb{background: #292c34; border: none; border-radius: 10px;}
 ::-webkit-scrollbar-track{background: #0e0f11; border: none; border-radius: 10px;}
 
+*, :after, :before{-webkit-box-sizing:border-box; -moz-box-sizing:border-box; box-sizing:border-box;}
 
 /* input : checkbox */
 input[type="checkbox"]{display: none;}
 input[type="checkbox"] + label{color: #333; cursor: pointer;}
-input[type="checkbox"] + label span{display: inline-block; width: 20px; height: 20px; margin: -2px 8px 0px 0px; vertical-align: middle; background: url('/images/default/chkboxBg.png') center center no-repeat; cursor: pointer;}
-input[type="checkbox"]:checked + label span{background: url('/images/default/chkboxBgChked.png') center center no-repeat;}
+input[type="checkbox"] + label span{display: inline-block; width: 20px; height: 20px; margin: -2px 8px 0px 0px; vertical-align: middle; background: url('../../images/default/chkboxBg.png') center center no-repeat; cursor: pointer;}
+input[type="checkbox"]:checked + label span{background: url('../../images/default/chkboxBgChked.png') center center no-repeat;}
 
 
 /* input : radio */
 input[type="radio"] {display: none;}
 input[type="radio"] + label {padding: 10px 10px 10px 0px; cursor: pointer;}
-input[type="radio"] + label span.round{display: inline-block; width: 20px; height: 20px; margin: -2px 8px 0px 0px; font-size: 0; vertical-align: middle; background: url('../images/default/radioBg.png') no-repeat; background-size: 100% 100%; cursor: pointer;}
-input[type="radio"] + label span.round{display: inline-block; width: 20px; height: 20px; margin: -2px 8px 0px 0px; font-size: 0; vertical-align: middle; background: url('../images/default/radioBg.png') no-repeat; background-size: 100% 100%; cursor: pointer;}
-input[type="radio"]:checked + label span.round {background: url('../images/default/radioBgChked.png') no-repeat; background-size: 100% 100%;}
+input[type="radio"] + label span.round{display: inline-block; width: 20px; height: 20px; margin: -2px 8px 0px 0px; font-size: 0; vertical-align: middle; background: url('../../images/default/radioBg.png') no-repeat; background-size: 100% 100%; cursor: pointer;}
+input[type="radio"] + label span.round{display: inline-block; width: 20px; height: 20px; margin: -2px 8px 0px 0px; font-size: 0; vertical-align: middle; background: url('../../images/default/radioBg.png') no-repeat; background-size: 100% 100%; cursor: pointer;}
+input[type="radio"]:checked + label span.round {background: url('../../images/default/radioBgChked.png') no-repeat; background-size: 100% 100%;}
 
 
 /* input + select + textarea */
@@ -72,6 +73,7 @@ header ul.utmenu li{display: flex; align-items: center; height: 100%; padding: 0
 .lnbToggle:hover span{-ms-transform: rotate(180deg); -webkit-transform: rotate(180deg); transform: rotate(180deg);}
 .lnb.toggle{left: -320px;}
 
+
 .subTitle{display: flex; align-items: center; justify-content: space-between; height: 60px; padding: 0px 14px; font-size: 16px; box-sizing: border-box; border-bottom: 2px solid #292c34;}
 .subTitle dt{}
 .subTitle dt span{margin: 0px 0px 0px 8px; color: #527aff; font-weight: bold;}
@@ -90,7 +92,7 @@ header ul.utmenu li{display: flex; align-items: center; height: 100%; padding: 0
 .listScroll dl{display: flex; align-items: center; justify-content: space-between; padding: 8px 8px 8px 14px; font-size: 14px; color: #dee0e4; box-sizing: border-box; border-bottom: 1px solid #292c34; cursor: pointer;}
 .listScroll dl:hover{background: #23252b;}
 .listScroll dl dt{display: flex; align-items: center; justify-content: space-between; font-size: 16px;}
-.listScroll dl dt span{ width: 50px; margin: 0px 8px 0px 0px; padding: 6px 4px; text-align: center; font-size: 12px; font-weight: bold; border-radius: 4px;}
+.listScroll dl dt span{width: 54px; margin: 0px 8px 0px 0px; padding: 6px 4px; text-align: center; font-size: 12px; font-weight: bold; border-radius: 4px;}
 .listScroll dl dt span.green{background: #426e55;}
 .listScroll dl dt span.gray{background: #515364;}
 .listScroll dl dt span.yellow{background: #e19f21;}
@@ -159,18 +161,18 @@ header ul.utmenu li{display: flex; align-items: center; height: 100%; padding: 0
 
 
 /* mapComponent */
-.mapComponent{position: absolute; right: 10px; bottom: 10px; background: lightsteelblue;}
+.mapComponent{display: flex; flex-direction: column; grid-gap: 10px; width: calc(100% - 340px); position: absolute; right: 10px; bottom: 10px; background: lightsteelblue;}
 .mapComponentSet{position: absolute; right: 470px; bottom: 0px; display: grid; grid-template-columns: 1fr 1fr; grid-gap: 10px;}
-.mapComponent article{flex: 1; display: flex; flex-direction: column; height: 160px; overflow: hidden; border-radius: 4px; background: #25262c;}
+.mapComponent article{flex: 1; display: flex; flex-direction: column; height: 160px; overflow: hidden; border-radius: 4px; background: #1e1f23;}
 .mapComponent article h6{height: 40px; line-height: 38px; padding: 0px 14px; font-size: 13px; font-weight: bold; color: #dee0e4; background: #1a1b1d;}
-.mapComponent article.altitude{width: 394px; height: 180px;}
+.mapComponent article.altitude{width: 460px; height: 180px;}
 .mapComponent article.altitude .graph{flex: 1; margin: 14px; background: lavender;}
 .mapComponent article.panel{display: flex; align-items: center; justify-content: center; flex-direction: row; grid-gap: 20px; width: 460px; height: 180px; background: none;}
 .mapComponent article.panel div{overflow: hidden; width: 180px; height: 180px; border-radius: 100%; background: #1c1d23;}
 .mapComponent article.control{display: flex; flex-direction: row; column-gap: 10px; background: none;}
 .mapComponent article.control div{display: flex; flex-direction: column; overflow: hidden; border-radius: 4px; background: #25262c;}
-.mapComponent article.control div.mission{width: 160px;}
-.mapComponent article.control div.drone{width: 224px;}
+.mapComponent article.control div.mission{width: 190px;}
+.mapComponent article.control div.drone{width: 260px;}
 .mapComponent article.control div ul{flex: 1; display: flex; align-items: center; justify-content: center; column-gap: 20px; margin: 14px;}
 .mapComponent article.control div ul li{display: flex; flex-direction: column; align-items: center; color: #7f8491; cursor: pointer;}
 .mapComponent article.control div ul li:hover{color: #dee0e4;}
@@ -200,6 +202,44 @@ header ul.utmenu li{display: flex; align-items: center; height: 100%; padding: 0
 .mapComponent article.stream .streamValues .slideBar dd .bar:hover{opacity: 1;}
 .mapComponent article.stream .streamValues .slideBar dd .bar::-webkit-slider-thumb{-webkit-appearance: none; appearance: none; width: 40px; height: 8px; border-radius: 8px; background: #3268e2; cursor: pointer;}
 .mapComponent article.stream .streamValues .slideBar dd .bar::-moz-range-thumb{width: 25px; height: 25px; background: #04aa6d; cursor: pointer;}
+.mapComponentMission{position: absolute; right: 1px; bottom: 255px;display: flex; flex-direction: column; align-items: flex-end; justify-content: flex-end; grid-gap: 10px;}
+.mapComponentMission .missionRoute{ overflow: hidden; width: 400px; height: 632px; max-height: 632px; border-radius: 4px;}
+
+.missionRoute .title{display: flex; align-items: center; justify-content: space-between; height: 60px; padding: 0px 14px; font-size: 16px; box-sizing: border-box; border-bottom: 2px solid #292c34; background: #1a1b1d;}
+.missionRoute .title dt{display: flex; align-items: center;}
+.missionRoute .title dd{}
+.missionRoute .title dd span{margin: 0px 0px 0px 8px; color: #527aff; font-weight: bold;}
+.missionRoute .missionStart{display: flex; align-items: center; justify-content: space-between; height: 40px; padding: 0px 20px; color: #a1a4ac; font-size: 13px; background: #1a1b1d;}
+.missionRoute .missionStart i{display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; margin: 0px;}
+.missionRoute .missionStart i img{width: 12px; height: 12px;}
+.routeContents{flex: 1; overflow: auto;}
+.routeSet{flex: 1; border-bottom: 1px solid #292c34;}
+.routeSet .routeTitle{display: flex; align-items: center; justify-content: space-between; grid-gap: 40px; height: 60px; padding: 0px 20px; border-bottom: 1px solid #292c34;}
+.routeSet .routeTitle dt{flex: 1; display: flex; align-items: center; justify-content: flex-start; grid-gap: 14px;}
+.routeSet .routeTitle dt .selectBox {flex: 1;}
+.routeSet .routeTitle dt .selectBox .box .select{height: 30px; line-height: 28px;}
+.routeSet .routeTitle dt .selectBox .box .list{top: 30px;}
+.routeSet .routeTitle dt span.num{width: 28px; height: 28px; line-height: 28px; text-align: center; border-radius: 100%; background: #2b2f3a;}
+.routeSet .routeTitle dd{flex: 0.4; display: flex; align-items: center; justify-content: flex-end; grid-gap: 8px;}
+.routeSet .routeTitle dd span.button{width: 46px; height: 30px; line-height: 28px; text-align: center; color: #527aff; border: 1px solid #2a4ab4; border-radius: 4px; box-sizing: border-box; cursor: pointer;}
+.routeSet .routeTitle dd i{display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; margin: 0px; cursor: pointer;}
+.routeSet .routeTitle dd i img{width: 12px; height: 12px;}
+.routeSet .coordinate{display: grid; grid-template-columns: 1fr 1fr 1fr; justify-items: flex-start; grid-gap: 14px; padding: 20px; border-bottom: 1px solid #292c34;}
+.routeSet .coordinate li{display: flex; align-items: center; flex-direction: column; grid-gap: 8px;}
+.routeSet .coordinate li span{display: flex; align-items: center;}
+.routeSet .coordinate li span:nth-child(1){color: #a1a4ac;}
+.routeSet .coordinate li span input{width: 86px; height: 30px; margin: 0px 8px 0px 0px; padding: 0px 10px; text-align: center;}
+.routeSet .camera{margin: 20px;}
+.routeSet .camera .button{position: relative; display: flex; align-items: center; width: 90px; height: 26px; line-height: 24px; margin: auto; padding: 0px 0px 0px 14px; color: #527aff; border: 1px solid #2a4ab4; border-radius: 4px; box-sizing: border-box; cursor: pointer;}
+.routeSet .camera .button span:after{content: '▼'; position: absolute; top: 0px; right: 14px; font-size: 12px;}
+.routeSet .camera ul{}
+.routeSet .camera ul li{display: flex; align-items: center; justify-content: space-between; height: 40px; line-height: 38px;}
+.routeSet .camera ul li span{flex: 1;}
+.routeSet .camera ul li span.input{display: flex; align-items: center; justify-content: flex-start; grid-gap: 14px;}
+.routeSet .camera ul li span.input input{width: 86px; height: 30px; padding: 0px 10px; text-align: center;}
+.mapComponent article.flightAltitude{width: 100%; height: 180px; min-height: 180px; max-height: 180px;}
+.mapComponent article.flightAltitude .graph{flex: 1; margin: 14px; background: lavender;}
+
 
 /* lnb searchForm */
 .lnb .searchForm{display: flex; flex-direction: column; grid-gap: 20px; padding: 14px; box-sizing: border-box; border-bottom: 2px solid #292c34;}
@@ -217,7 +257,7 @@ header ul.utmenu li{display: flex; align-items: center; height: 100%; padding: 0
 .selectBox.on .box .select:after{content: '▲';}
 .selectBox .box .list{display: none; overflow-y: auto; position: absolute; top: 40px; left: 0; z-index: 10; width: 100%; max-height: 200px; padding: 8px 0px; background-color: #23252b; border: 1px solid #292c34; box-sizing: border-box;}
 .selectBox .box .list::-webkit-scrollbar{width: 10px; height: 0;}
-.selectBox .box .list::-webkit-scrollbar-button:start:decrement, 
+.selectBox .box .list::-webkit-scrollbar-button:start:decrement,
 .selectBox .box .list::-webkit-scrollbar-button:end:increment{display: block; height: 0;}
 .selectBox .box .list::-webkit-scrollbar-track{background: rgba(0,0,0,.05); -webkit-border-radius: 10px; border-radius: 10px;}
 .selectBox .box .list::-webkit-scrollbar-thumb{height: 50px; width: 50px; background: rgba(0,0,0,.2); -webkit-border-radius: 5px; border-radius: 5px;}
