Iot 플랫폼 문구 변경, 타임리프 공통 UI 수정, 환경설정 페이지 추가

--- a/danusys-platform/src/main/resources/templates/fragments/default/includes.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/includes.html
@@ -19,6 +19,7 @@
 
     <!--js file -->
     <script src="/webjars/jquery/3.6.0/dist/jquery.min.js"></script>
+    <script src="/webjars/jquery/3.6.0/dist/jquery.min.js"></script>
 
     <th:block th:if="${pagesLink}" >
         <th:block th:insert="${pagesLink}"></th:block>
