--- a/danusys-platform/src/main/resources/static/css/default/layout.css
+++ b/danusys-platform/src/main/resources/static/css/default/layout.css
@@ -11,8 +11,6 @@ ol, ul{list-style: none;}
 blockquote, q{quotes: none;}
 blockquote:before, blockquote:after, q:before, q:after{content: ''; content: none;}
 table{border-collapse: collapse; border-spacing: 0;}
-a {color: #dee0e4; text-decoration-line: none; cursor: pointer;}
-a:hover{ text-decoration: none; color: #dee0e4;}
 
 /* scroll bar */
 ::-webkit-scrollbar{width: 6px; height: 7px;}
@@ -32,11 +30,11 @@ input[type="checkbox"]:checked + label span{background: url('../../images/defaul
 input[type="radio"] {display: none;}
 input[type="radio"] + label {padding: 10px 10px 10px 0px; cursor: pointer;}
 input[type="radio"] + label span.round{display: inline-block; width: 20px; height: 20px; margin: -2px 8px 0px 0px; font-size: 0; vertical-align: middle; background: url('../../images/default/radioBg.png') no-repeat; background-size: 100% 100%; cursor: pointer;}
-input[type="radio"]:checked + label span.round {background: url('.. /images/default/radioBgChked.png') no-repeat; background-size: 100% 100%;}
+input[type="radio"]:checked + label span.round {background: url('../../images/default/radioBgChked.png') no-repeat; background-size: 100% 100%;}
 
 
 /* input + select + textarea */
-input{box-sizing: border-box; width: 100%; height: 40px; margin: 0px; padding: 0px 14px; font-size: 14px; color: #dee0e4; background: transparent; border: none; border: 1px solid #292c34; border-radius: 4px;}
+input{box-sizing: border-box; width: 100%; height: 34px; margin: 0px; padding: 0px 14px; font-size: 14px; color: #dee0e4; background: transparent; border: none; border: 1px solid #292c34; border-radius: 4px;}
 select{box-sizing: border-box; width: 100%; height: 40px; margin: 0px; padding: 0px 14px; font-family: inherit; font-size: 14px; color: #dee0e4; background: transparent; border: 1px solid #292c34; border-radius: 4px;}
 input, select:focus{outline: none;}
 textarea{width: calc(100% - 28px); min-height: 60px; margin: 0px; padding: 14px; color: #FFF; background: #2b3332; border: none; border: 1px solid #292c34; box-sizing: border-box; border-radius: 4px;}
@@ -55,9 +53,14 @@ header .logo{width: 320px; font-size: 18px;}
 header .logo i{margin: 0px 14px 0px 0px;}
 header .gnm{display: flex; align-items: center; column-gap: 80px; font-size: 18px;}
 header .gnm li{cursor: pointer;}
-header .gnm li:hover{text-shadow: #eee 2px 0 10px;}
-header .gnm li.active{text-shadow: #eee 2px 0 10px;}
+/*header .gnm li:hover{font-weight: bold;}*/
+header .gnm li:hover{padding: 6px 0px; transition: 0.3s; border-bottom: 3px solid #3863f1;}
+header .gnm li:active{padding: 6px 0px; border-bottom: 3px solid #3863f1;}
+header .gnm li.active{padding: 6px 0px; border-bottom: 3px solid #3863f1;}
+header .gnm li a{text-decoration: none; color: #fff}
 header .utmenu{display: flex; align-items: center; column-gap: 40px;}
+header .utmenu li{white-space: nowrap; font-size: 14px; color: #dee0e4;}
+header .utmenu li i{width: 18px; height: 18px; margin: 0px 8px 0px 0px;}
 
 
 /* lnb */
@@ -96,7 +99,7 @@ header .utmenu{display: flex; align-items: center; column-gap: 40px;}
 .subTitle dt ul{display: flex; align-items: center; column-gap: 4px; margin: 0px 0px 0px 14px;}
 .subTitle dt ul li{}
 .subTitle dd{}
-.button{height: 30px; padding: 0px 8px; font-size: 14px; padding: 6px; box-sizing: border-box; background: #292c34; border-radius: 4px;}
+.button{height: 30px; font-size: 14px; padding: 6px; box-sizing: border-box; background: #292c34; border-radius: 4px; cursor: pointer;}
 .button i{width: 16px; height: 16px;}
 
 
@@ -146,10 +149,13 @@ header .utmenu{display: flex; align-items: center; column-gap: 40px;}
 /* page nav */
 .searchList .listPage{display: flex; align-items: center; justify-content: space-around; column-gap: 8px; height: 46px; padding: 0px 14px; font-size: 14px; color: #7f8491; border-top: 2px solid #292c34; box-sizing: border-box;}
 .searchList .listPage li{flex: 1; max-width: 28px; height: 28px; line-height: 26px; border-radius: 50%; text-align: center; font-size: 14px; cursor: pointer;}
-.searchList .listPage li.prev, .searchList .listPage li.next{max-width: 16px; max-height: 16px;}
 .searchList .listPage li:hover{font-weight: bold; color: #dee0e4; background: #292c34;}
 .searchList .listPage li.on{font-weight: bold; color: #dee0e4; background: #3a66e5;}
 .searchList .listPage li i{display: block; width: 16px; height: 16px;}
+.searchList .listPage li.prev,
+.searchList .listPage li.next{max-width: 16px; max-height: 16px;}
+.searchList .listPage li.prev:hover,
+.searchList .listPage li.next:hover{max-width: 16px; max-height: 16px; filter: brightness(1.75); background: none;}
 
 
 /* footer */
@@ -161,7 +167,7 @@ header .utmenu{display: flex; align-items: center; column-gap: 40px;}
 
 /* map */
 #map{position: relative; flex: 1; background: #ccd5de;}
-.mapButton{position: absolute; top: 0; right: 0; display: flex; flex-direction: column; align-items: flex-end; margin: 10px; z-index: 1;}
+.mapButton{position: absolute; top: 0; right: 0; display: flex; flex-direction: column; align-items: flex-end; margin: 10px;}
 .mapButton ul{overflow: hidden; width: 40px; margin: 0px 0px 10px; border-radius: 4px; background: #1a1b1d;}
 .mapButton ul li{display: flex; align-items: center; justify-content: center; height: 40px; box-sizing: border-box; border-bottom: 1px solid #434751; text-indent: -9999px; cursor: pointer;}
 .mapButton ul li i{display: flex; align-items: center; justify-content: center; margin: 0px;}
@@ -175,8 +181,8 @@ header .utmenu{display: flex; align-items: center; column-gap: 40px;}
 
 
 /* infoArea */
-.infoArea{display: flex; flex-direction: column; width: 500px; height: inherit; background: #1a1b1d; position: absolute; right: 0px; z-index: 2;}
-.infoTitle{display: flex; align-items: center; justify-content: space-between; width: 100%; height: 40px; padding: 0px 14px; box-sizing: border-box; background: #23252b;}
+.infoArea{display: flex; flex-direction: column; width: 500px; height: 100%; background: #1a1b1d;}
+.infoTitle{display: flex; align-items: center; justify-content: space-between; width: 100%; height: 40px; min-height: 40px; padding: 0px 14px; box-sizing: border-box; background: #23252b;}
 .infoTitle span{color: #dee0e4; font-size: 16px;}
 .infoTitle i{cursor: pointer;}
 .infoArea .subTitle dt ul li{width: 70px; height: 28px; line-height: 26px; padding: 0px 8px; text-align: center; color: #7f8491; font-size: 14px; box-sizing: border-box; background: #292c34; border-radius: 4px; cursor: pointer;}
@@ -220,6 +226,8 @@ header .utmenu{display: flex; align-items: center; column-gap: 40px;}
 .infoCurrent article dl dd span{margin: 0px 0px 1px 4px; font-size: 14px; font-weight: lighter; color: #7f8491;}
 .infoCurrent article dl.color{}
 .infoCurrent article dl.color dd.blue, .infoCurrent article dl.color dd.blue span{color: #43a4ff;}
+
+
 .infoCurrent article dl.color dd.green, .infoCurrent article dl.color dd.green span{color: #3ad274;}
 .infoCurrent article dl.color dd.orange, .infoCurrent article dl.color dd.orange span{color: #fda60e;}
 .infoCurrent article dl.color dd.red, .infoCurrent article dl.color dd.red span{color: #f15454;}
@@ -244,22 +252,19 @@ header .utmenu{display: flex; align-items: center; column-gap: 40px;}
 
 /* accordionMenu */
 .accordionMenu{overflow: hidden; width: 320px; min-width: 320px; max-width: 320px; height: auto; background: #1a1b1d;}
-.accordion, .accordion ul, .accordion li, .accordion a, .accordion span. .accordion dl{margin: 0; padding: 0; border: none; outline: none;}
-.accordion li, .accordion dl{list-style: none;}
+.accordion, .accordion ul, .accordion li, .accordion a, .accordion span{margin: 0; padding: 0; border: none; outline: none;}
+.accordion li{list-style: none;}
 
 /* Layout & Style */
-.accordion li > a, .accordion dd > a{position: relative; display: flex; align-items: center; justify-content: space-between; height: 60px; padding: 0px 24px 0px 48px; color: #797d87; font-size: 16px; text-decoration: none; box-sizing: border-box; border-bottom: 1px solid #292c34; background: #1a1b1d;}
+.accordion li > a{position: relative; display: flex; align-items: center; justify-content: space-between; height: 60px; padding: 0px 24px 0px 48px; color: #797d87; font-size: 16px; text-decoration: none; box-sizing: border-box; border-bottom: 1px solid #292c34; background: #1a1b1d;}
 .accordion > li:hover > a,
-/*.accordion > li:target > a,*/
-.accordion > li.on > a,
-.accordion > dd:hover > a,
-    /*.accordion > li:target > a,*/
-.accordion > dd.on > a{color: #dee0e4; background: #26282f;}
+.accordion > li:target > a,
+.accordion > li.on > a{color: #dee0e4; background: #26282f;}
 
 /* count */
-.accordion li > a span, .accordion dl > a{color: #bc4a4a; font-size: 15px; font-weight: bold;}
+.accordion li > a span{color: #bc4a4a; font-size: 15px; font-weight: bold;}
 .accordion > li:hover > a span,
-/*.accordion > li:target > a span,*/
+.accordion > li:target > a span,
 .accordion > li.on > a span{color: #bc4a4a; font-size: 15px; font-weight: bold;}
 
 /* Images */
@@ -269,25 +274,24 @@ header .utmenu{display: flex; align-items: center; column-gap: 40px;}
 
 /* Sub Menu */
 .sub-menu{}
-.sub-menu dd a {color: #797d87; font-size: 14px; border: none; background: #1a1b1d;}
-.sub-menu dd a:before{position: absolute; top: 20px; left: 24px; content: ''; width: 12px; height: 12px; margin: 0px; box-sizing: border-box; background: url(../../images/default/settingMenuTree.svg);}
-.sub-menu dd > a span{color: #bc4a4a; font-size: 15px; font-weight: bold;}
+.sub-menu li a {padding: 0px 24px 0px 446x; color: #797d87; font-size: 14px; border: none; background: #1a1b1d;}
+.sub-menu li a:before{position: absolute; top: 20px; left: 24px; content: ''; width: 12px; height: 12px; margin: 0px; box-sizing: border-box; background: url(../../images/default/settingMenuTree.svg);}
+.sub-menu li > a span{color: #bc4a4a; font-size: 15px; font-weight: bold;}
 
 /* Functionality */
 .accordion li > .sub-menu{height: 0; overflow: hidden; -webkit-transition: height .2s ease-in-out; -moz-transition: height .2s ease-in-out; -o-transition: height .2s ease-in-out; -ms-transition: height .2s ease-in-out; transition: height .2s ease-in-out;}
-/*.accordion li:target > .sub-menu{height: 120px; box-sizing: border-box; border-bottom: 1px solid #292c34;}*/
-.accordion li.on > .sub-menu{height: 120px; box-sizing: border-box; border-bottom: 1px solid #292c34;}
-.sub-menu dd a:hover,
-.sub-menu dd a:active,
-.sub-menu dd a:target,
-.sub-menu dd.on > a{color: #dee0e4;}
+.accordion li:target > .sub-menu{height: 120px; box-sizing: border-box; border-bottom: 1px solid #292c34;}
+.sub-menu li a:hover,
+.sub-menu li a:active,
+.sub-menu li a:target{color: #dee0e4;}
 /* //accordionMenu */
 
 
 /* setting */
 .setting{display: flex; height: calc(100% - 60px);}
-
-.settingContainer{flex: 1; display: flex; flex-direction: column; background: #0c0c0d;}
+.settingContainer{
+    /*    overflow: hidden;*/
+    flex: 1; display: flex; flex-direction: column; background: #0c0c0d;}
 .settingContainer h4{display: flex; align-items: center; column-gap: 10px; box-sizing: border-box; height: 60px; padding: 0px 26px; border-bottom: 1px solid #292c34;}
 .settingContainer h4 i{margin: 0px;}
 .settingContainer h4 i img{max-width: 20px; max-height: 20px; margin: auto;}
@@ -304,17 +308,27 @@ header .utmenu{display: flex; align-items: center; column-gap: 40px;}
 .searchForm form div dl dt{min-width: 86px; color: #797d87; font-size: 14px; font-weight: bolder;}
 .searchForm form div dl dd{display: flex; align-items: center; justify-content: flex-start; grid-gap: 40px; white-space: nowrap;}
 .searchForm form div dl dd label{color: #dee0e4; font-weight: normal;}
-.searchForm form div dl span{color: #797d87; font-size: 14px;}
+
+
+.searchForm form div dl span{color: #797d87; font-size: 14px; white-space: nowrap;}
 .searchForm form div dl.dateSet{grid-gap: 20px;}
 .searchForm form div dl.dateSet [type="date"]{background: url(../../images/default/calendar.svg) 94% center no-repeat; background-size: 18px;}
 .searchForm form div dl.dateSet [type="date"]::-webkit-inner-spin-button{display: none;}
 .searchForm form div dl.dateSet [type="date"]::-webkit-calendar-picker-indicator{opacity: 0;}
+
+
+.searchForm form div dl.dateSet [type="time"]{background: url(../../images/default/clock.svg) 94% center no-repeat; background-size: 18px;}
+.searchForm form div dl.dateSet [type="time"]::-webkit-inner-spin-button{display: none;}
+.searchForm form div dl.dateSet [type="time"]::-webkit-calendar-picker-indicator{opacity: 0;}
+
+
+
 .searchForm form div dl::after{content: ''; position: absolute; right: 0px; width: 2px; height: 20px; background: #32353e;}
 .searchForm form div dl:nth-last-child(1)::after{display: none;}
 /* button */
 .searchForm form div dl.searchTextSet{grid-gap: 10px;}
 .searchForm form div dl.searchTextSet dd input{background: url(../../images/default/search.svg) 94% center no-repeat; background-size:20px 20px;}
-.searchForm form div dl.searchTextSet dd.button{height: 40px; padding: 0px 14px; grid-gap: 0px; color: #7f8491;}
+.searchForm form div dl.searchTextSet dd.button{height: 34px; padding: 0px 14px; grid-gap: 0px; color: #7f8491;}
 .searchForm form div dl.searchTextSet dd.button:hover,
 .searchForm form div dl.searchTextSet dd.button:active{color: #dee0e4;}
 /* //searchForm */
@@ -329,7 +343,7 @@ header .utmenu{display: flex; align-items: center; column-gap: 40px;}
 .articleTitle dl dd{font-size: 16px;}
 .articleTitle dl dd span{margin: 0px 4px 0px 0px; color: #3965e3; font-weight: bold;}
 .articleTitle ul{display: flex; align-items: center; column-gap: 10px;}
-.articleTitle ul li{height: 40px; line-height: 38px; padding: 0px 14px; font-size: 14px; color: #7f8491; border-radius: 4px; background: #292c34; cursor: pointer;}
+.articleTitle ul li{height: 34px; line-height: 32px; padding: 0px 14px; font-size: 14px; color: #7f8491; border-radius: 4px; background: #292c34; cursor: pointer;}
 .articleTitle ul li:hover{color: #dee0e4;}
 .articleTitle ul li i{width: 16px; height: 16px;}
 
@@ -359,6 +373,7 @@ header .utmenu{display: flex; align-items: center; column-gap: 40px;}
 .searchTable table tbody tr td span.type.pole{background: #d78219;}
 .searchTable table tbody tr td span.type i{margin: 5px 0px; opacity: 0.8; cursor: default;}
 .searchTable table tbody tr td span.type.bus i{width: 16px; height: 16px; margin: 7px 0px;}
+.searchTable table tbody tr td .charts{width: 100%; height: 38px; margin: auto; line-height: 34px; color: darkslateblue; background: darkseagreen;} /* 차트 영역 임의 표시 */
 .tableBottom{display: flex; align-items: center; justify-content: center; height: 40px; margin: 14px 0px 0px;}
 .tableBottom .pageNav{flex: 1;  display: flex; align-items: center; justify-content: center; grid-gap: 10px;}
 .tableBottom .pageNav li{width: 34px; height: 34px; line-height: 32px; text-align: center; font-size: 14px; color: #7f8491; border-radius: 100%; background: #292c34; cursor: pointer;}
@@ -373,13 +388,12 @@ header .utmenu{display: flex; align-items: center; column-gap: 40px;}
 .tableBottom .pageNav li.next:hover{filter: brightness(1.75);}
 
 
-.tableBottom .button{float: right; height: 40px; line-height: 38px; padding: 0px 14px; color: #7f8491;}
+.tableBottom .button{float: right; height: 34px; line-height: 32px; padding: 0px 14px; color: #7f8491;}
 .tableBottom .button:hover{color: #dee0e4;}
 
 
 /* inquiry */
 .inquiry{display: flex; height: calc(100% - 60px);}
-
 .inquiryContainer{flex: 1; display: flex; flex-direction: column; background: #0c0c0d;}
 .inquiryContainer h4{display: flex; align-items: center; column-gap: 10px; box-sizing: border-box; height: 60px; padding: 0px 26px; border-bottom: 1px solid #292c34;}
 .inquiryContainer h4 i{margin: 0px;}
@@ -400,22 +414,26 @@ header .utmenu{display: flex; align-items: center; column-gap: 40px;}
 
 /* dropdown_checkbox */
 .dropdownCheckbox{min-width: 220px; margin: 0px;}
-.checkboxTitle{width: 100%; height: 40px; line-height: 38px; margin: 0px; padding: 0px 14px; color: #dee0e4; font-size: 14px; box-sizing: border-box; border: 1px solid #292c34; border-radius: 3px; background: url("../../images/default/bg_selectbox_g.svg") 194px center no-repeat #1a1b1d; background-size: 13px; cursor: pointer;}
-.checkboxList{position: absolute; top: 40px; display: none; overflow: auto; width: 360px; min-height: 86px; max-height: 140px; z-index: 1; margin: -1px 0px 0px 0px; padding: 14px; box-sizing: border-box; border-bottom-left-radius: 4px; border-bottom-right-radius: 4px; border: 1px solid #292c34; background: #1a1b1d;}
+.checkboxTitle{width: 100%; height: 34px; line-height: 32px; margin: 0px; padding: 0px 14px; color: #dee0e4; font-size: 14px; box-sizing: border-box; border: 1px solid #292c34; border-radius: 3px; background: url("../../images/default/bg_selectbox_g.svg") 194px center no-repeat #1a1b1d; background-size: 13px; cursor: pointer;}
+.checkboxList{position: absolute; top: 34px; display: none; overflow: auto; width: 360px; min-height: 86px; max-height: 140px; z-index: 1; margin: -1px 0px 0px 0px; padding: 14px; box-sizing: border-box; border-bottom-left-radius: 4px; border-bottom-right-radius: 4px; border: 1px solid #292c34; background: #1a1b1d;}
 .checkboxList li{display: flex; align-items: center; justify-content: flex-start; grid-gap: 10px; line-height: 28px; color: #dee0e4;}
 .checkboxList li span{flex: 1;}
 
 
+/* dimming */
+.settingContent article.dimmingSet{flex: 0.6; overflow: hidden;}
+.settingContent article.dimmingSet .articleTitle{margin: 0px;}
+.settingDimming{overflow: auto; flex: 1; display: flex; flex-direction: column; justify-content: space-between;}
+.settingDimming ul{display: flex; align-items: center; justify-content: flex-start; grid-gap: 40px;}
+.settingDimming ul li{display: flex; align-items: center; justify-content: center; grid-gap: 14px; white-space: nowrap;}
+.settingDimming ul li input{max-width: 80px; margin: 0px; text-align: center;}
+.settingDimming ul li span{font-size: 14px; font-weight: bold; color: rgba(222,224,228,.5);}
+.dimmingByTime{}
+.dimmingByTime p{margin: 0px 0px 14px; font-size: 14px; font-weight: bold; color: rgba(222,224,228,.5);}
+.dimmingByTime table{width: 100%;}
+.dimmingByTime table, .dimmingByTime table th, .dimmingByTime table td{height: 32px; vertical-align: middle; text-align: center; box-sizing: border-box; border: 1px solid #292c34; border-collapse: collapse;}
+.dimmingByTime table td input{max-width: 36px; height: 32px; padding: 0px; text-align: center; border: none;}
 
-
-
-
-
-
-
-
-
-
-
-
-
+/* commonCode */
+.commonCodeCont{flex: 1; display: flex; align-items: center; justify-content: space-between; grid-gap: 14px; overflow: hidden;}
+.commonCodeCont article{flex: 1; height: 100%; box-sizing: border-box;}
