--- a/danusys-platform/src/main/resources/templates/layout/layout_config.html
+++ b/danusys-platform/src/main/resources/templates/layout/layout_config.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<head>
-    <th:block th:insert="fragments/default/includes :: includes_head(~{::pagesLink})"></th:block>
-</head>
+<th:block th:insert="/fragments/default/head" />
+
 <body>
 <div class="wrap">
-    <th:block th:replace="fragments/default/header :: headerFragment">
-    </th:block>
+    <th:block th:replace="fragments/default/header :: headerFragment" />
 
-    <th:block layout:fragment="content">
-    </th:block>
+    <div class="setting">
+        <th:block th:replace="fragments/config/nav :: navFragment" />
+        <div class="settingContainer">
+            <th:block layout:fragment="content" />
+        </div>
+    </div>
 
-    <th:block th:insert="fragments/default/includes :: includes_footer(~{::pagesScript})">
-    </th:block>
+    <th:block th:replace="fragments/default/footer :: footerFragment" />
 
-    <th:block th:replace="fragments/default/footer :: footerFragment">
-    </th:block>
 </div>
 </body>
-
 </html>
